--- a/PhonebookApp/ClientApp/src/app/app.component.html
+++ b/PhonebookApp/ClientApp/src/app/app.component.html
@@ -2,5 +2,7 @@
   <app-nav-menu></app-nav-menu>
   <div class="container">
     <router-outlet></router-outlet>
+    <!--<app-value>
+    </app-value>-->
   </div>
 </body>
