Add Get Phonebook List controller and get data from DB

--- a/PhonebookApp/ClientApp/src/app/phonebook/phonebook.component.html
+++ b/PhonebookApp/ClientApp/src/app/phonebook/phonebook.component.html
@@ -1,3 +1,3 @@
 <p *ngFor="let value of values">
-  {{value.summary}},{{value.temperatureC}}
+  {{value.id}},{{value.name}}, {{value.surname}}, {{value.number}}
 </p>
